fix post media should be aligned center horizontally and vertically

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -120,6 +120,12 @@ a {
 	align-self: center;
 }
 
+.slick-slide .container {
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+
 .media>.container {
 	display: flex;
 	justify-content: center;
